--- a/res/layout/input_one.xml
+++ b/res/layout/input_one.xml
@@ -7,9 +7,10 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="@string/input"
         android:paddingBottom="25dp"
+        android:text="@string/input"
         android:textSize="50sp" />
 
     <EditText
