--- a/res/layout/input_two.xml
+++ b/res/layout/input_two.xml
@@ -7,6 +7,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:paddingBottom="25dp"
         android:text="@string/input_two"
