Added citation to Data Genetics.

--- a/res/layout/data.xml
+++ b/res/layout/data.xml
@@ -12,7 +12,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="4dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="50dp"
@@ -23,10 +23,19 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
+            android:gravity="center"
+            android:textStyle="italic"
+            android:text="@string/data_citation"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/data_header"
-            android:textSize="14sp"
             android:textColor="@color/Gold"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
         <TextView
