Pushed main features to Shoulder Surfer.
-name change
-color scheme switched
-algorithm fixed
-TODO: fix the about, how it works dialog
-TODO: edit the README

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,15 +7,27 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="50dp"
-        android:drawablePadding="15dp"
-        android:drawableBottom="@drawable/logo_no_bg"
         android:gravity="center"
+        android:textStyle="bold"
         android:text="@string/hello"
         android:textSize="45sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="15dp"
+        android:drawableBottom="@drawable/logo_no_bg"
+        android:drawablePadding="15dp"
+        android:gravity="center"
+        android:textStyle="italic"
+        android:text="@string/spoue_attack"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/button1"
